--- a/rro_overlays/FrameworksResCommon/res/values/config.xml
+++ b/rro_overlays/FrameworksResCommon/res/values/config.xml
@@ -339,4 +339,7 @@
 
     <!-- the number of the max cached processes in the system. -->
     <integer name="config_customizedMaxCachedProcesses">64</integer>
+
+    <!-- Auto-brightness sensor type string -->
+    <string name="config_displayLightSensorType">"android.sensor.light"</string>
 </resources>
