sm8350-common: Enable head tracking for Spatial audio
Change-Id: Idb1c0823ef73b736f373a21b98d2c7844af70121
Signed-off-by: aswin7469 <aswinas@pixysos.com>
Signed-off-by: ralph950412 <ralph950412@gmail.com>

--- a/rro_overlays/FrameworksResCommon/res/values/config.xml
+++ b/rro_overlays/FrameworksResCommon/res/values/config.xml
@@ -342,4 +342,8 @@
 
     <!-- Auto-brightness sensor type string -->
     <string name="config_displayLightSensorType">"android.sensor.light"</string>
+
+    <!-- The default value for whether head tracking for
+         spatial audio is enabled for a newly connected audio device -->
+    <bool name="config_spatial_audio_head_tracking_enabled_default">true</bool>
 </resources>
