--- a/rro_overlays/FrameworksResCommon/res/values/config.xml
+++ b/rro_overlays/FrameworksResCommon/res/values/config.xml
@@ -216,6 +216,9 @@
     <!-- Doze: should the TYPE_PICK_UP_GESTURE sensor be used as a pulse signal. -->
     <bool name="config_dozePulsePickup">true</bool>
 
+    <!-- Type of the tap sensor. Empty if tap is not supported. -->
+    <string name="config_dozeTapSensorType" translatable="false">com.statixos.sensor.single_tap</string>
+
     <!-- If true, the display will be shifted around in ambient mode. -->
     <bool name="config_enableBurnInProtection">true</bool>
 
