sm8350-common: overlay: Enable 5G SA and NSA
Change-Id: I2101eb6052bd74eed9ce6a981809bbbae0d61ec5

--- a/rro_overlays/FrameworksResCommon/res/values/config.xml
+++ b/rro_overlays/FrameworksResCommon/res/values/config.xml
@@ -336,4 +336,10 @@
 
     <!-- True if the device supports Sustained Performance Mode-->
     <bool name="config_sustainedPerformanceModeSupported">true</bool>
+
+    <!-- Whether the device enable the standalone (SA) mode of 5G NR.-->
+    <bool name="config_telephony5gStandalone">true</bool>
+
+    <!-- Whether the device enable the non-standalone (NSA) mode of 5G NR.-->
+    <bool name="config_telephony5gNonStandalone">true</bool>
 </resources>
