[QPR2] sm8350-common: Migrate parts to SwitchPreferenceCompat
Change-Id: I8f1a5e65ee7f617ff179c58f6db6fee4c6b36645

--- a/parts/res/xml/doze_settings.xml
+++ b/parts/res/xml/doze_settings.xml
@@ -24,7 +24,7 @@
         android:key="doze_enable"
         android:title="@string/ambient_enable" />
 
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:key="always_on_display"
         android:disableDependentsState="true"
         android:icon="@drawable/ic_doze_aod"
